fix an issue where on retina the entire collapsable block on text plugin is a background

--- a/cms/static/cms/sass/modules/_structureboard.scss
+++ b/cms/static/cms/sass/modules/_structureboard.scss
@@ -130,7 +130,7 @@ display:none; position:absolute; top:0; right:0; width:100%; height:100%; z-inde
 //.cms_placeholder .cms_draggables .cms_draggable { margin-left:0 !important; }
 
 // hide arrow when adding plugin-in-plugin within disabled item
-.cms_draggable-disabled > .cms_dragitem-collapsable { background:none; padding-left:0; }
+.cms_draggable-disabled > .cms_dragitem-collapsable { background:none !important; padding-left:0; }
 .cms_draggable-disabled > .cms_draggables { display:none !important; }
 
 // end of dragarea
